@@ -1,3 +1,7 @@
+Tue Dec 15 16:24:39 2015  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>
+
+	* lib/monitor.rb: remove @mon_owner. Mutex.owned? is a better way.
+
 Tue Dec 15 16:09:04 2015  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>
 
 	* test/monitor/test_monitor.rb
